# llm-for-recsys-shadow

./: .gitignore  Readme.md  pyproject.toml
E4SRec/: README.md  fine-tuning.sh  finetune.py  finetuning.py  pyproject.toml  requirements.txt  test_opt.ipynb
E4SRec/datasets/general/ML1M/: VanillaMF_item_embed.pkl  VanillaMF_user_embed.pkl
E4SRec/e4srec/: dataset.py  model.py
E4SRec/e4srec/utils/: config.py  prompter.py
LlamaRec/src/: main.py
LlamaRec/src/models/llamarec/: dataset.py  llamarec.py
LlamaRec/src/processor/: base.py  util.py
MACRec/: .gitignore  README.md  evaluate.sh  main.py  pyproject.toml  requirements.txt  web_demo.py
MACRec/config/: api-config-example.json
MACRec/config/agents/: manager_action.json
MACRec/macrec/agents/: __init__.py  analyst.py  base.py  interpreter.py  manager.py  reflector.py  searcher.py
MACRec/macrec/dataset/: __init__.py  ml100k.py
MACRec/macrec/evaluation/: __init__.py  metric_dict.py  rank_metric.py  rating_metric.py
MACRec/macrec/llms/: __init__.py  basellm.py  openai.py  opensource.py
MACRec/macrec/pages/: chat.py  demo.py  generation.py  task.py
MACRec/macrec/systems/: __init__.py  analyse.py  base.py  chat.py  collaboration.py  react.py  reflection.py
MACRec/macrec/tasks/: __init__.py  base.py  evaluate.py  generation.py  preprocess.py  pure_generation.py
MACRec/macrec/tools/: __init__.py  base.py  info_database.py  interaction.py  summarize.py  wikipedia.py
MACRec/macrec/utils/: __init__.py  check.py  data.py  decorator.py  init.py  parse.py  prompts.py  string.py  utils.py  web.py
src/models/llamarec/: trainer.py  verb.py
src/processor/: ebnerd.py
src/prompt/: completion.py
(+1 files in other folders)
